--- a/app/src/app/modules/login/login.page.html
+++ b/app/src/app/modules/login/login.page.html
@@ -2,7 +2,10 @@
   <ion-grid class="class-grid">
     <form class="submit-container" [formGroup]="form" (ngSubmit)="onSubmit()">
       <ion-row class="ion-justify-content-center">
-        <img src="assets/imgs/logo.svg" width="120px">
+        <!-- <img src="assets/imgs/logo.svg" width="120px"> -->
+        <h1 class="title-logo">Levi
+          <span>App</span>
+        </h1>
       </ion-row>
 
       <ion-row class="ion-margin-top">
