--- a/app/src/app/modules/tabs/tabs.page.html
+++ b/app/src/app/modules/tabs/tabs.page.html
@@ -5,8 +5,8 @@
       <ion-icon [name]="tabSelected == 'home' ? 'home':'home-outline'"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button tab="address" layout="icon-top">
-      <ion-icon [name]="tabSelected == 'address' ? 'navigate':'navigate-outline'"></ion-icon>
+    <ion-tab-button tab="songs" layout="icon-top">
+      <ion-icon [name]="tabSelected == 'songs' ? 'musical-notes':'musical-notes-outline'"></ion-icon>
     </ion-tab-button>
 
     <ion-tab-button tab="user" layout="icon-top">
