--- a/app/src/global.scss
+++ b/app/src/global.scss
@@ -28,6 +28,7 @@
 @import "~@ionic/angular/css/flex-utils.css";
 
 @import '~@ctrl/ngx-emoji-mart/picker';
+@import "~quill/dist/quill.snow.css";
 
 @font-face {
     font-family: 'Poppins';
