--- a/app/src/app/modules/home/home.page.html
+++ b/app/src/app/modules/home/home.page.html
@@ -1,9 +1,10 @@
 <ion-header class="ion-no-border">
   <ion-toolbar color="primary">
     <ion-title class="ion-text-center ion-margin-top">
-      <img src="assets/imgs/logo_header.svg" alt="">
+      <!-- <img src="assets/imgs/logo_header.svg" alt=""> -->
+      <ion-title>Levi</ion-title>
     </ion-title>
-    <div class="ion-padding-start ion-padding-bottom ion-padding-end">
+    <!-- <div class="ion-padding-start ion-padding-bottom ion-padding-end">
       <ion-row>
         <ion-text color="light">
           <h5>Hola Mario Caceres!</h5>
@@ -18,10 +19,10 @@
           </ion-button>
         </ion-item>
       </ion-row>
-    </div>
+    </div> -->
   </ion-toolbar>
 
-  <ion-toolbar color="light">
+  <!-- <ion-toolbar color="light">
     <swiper [config]="swiperConfig" class="ion-padding-start ion-padding-end">
       <ng-template swiperSlide>
         <ion-chip class="active">Bares</ion-chip>
@@ -39,12 +40,12 @@
         <ion-chip>Otros Locales</ion-chip>
       </ng-template>
     </swiper>
-  </ion-toolbar>
+  </ion-toolbar> -->
 </ion-header>
 
 <ion-content>
   <ion-text color="tertiary">
-    <h5 class="ion-margin-start">Mi reserva</h5>
+    <h5 class="ion-margin-start">Mis servicios</h5>
   </ion-text>
 
   <ion-card *ngFor="let i of [1,1,1,1]">
