--- a/app/src/app/modules/login/login.page.scss
+++ b/app/src/app/modules/login/login.page.scss
@@ -34,3 +34,15 @@ ion-content {
     }
 
 }
+
+.title-logo{
+    font-size: 4rem;
+    font-weight: 900;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+
+    span{
+        font-size: 1rem;
+    }
+}
