--- a/app/src/app/modules/songs/songs.page.html
+++ b/app/src/app/modules/songs/songs.page.html
@@ -8,7 +8,7 @@
 
   <div class="ion-padding-start ion-padding-end ion-margin-top">
     <ion-row>
-      <ion-item lines="none">
+      <ion-item lines="none" class="border-10">
         <ion-icon name="search" slot="start"></ion-icon>
         <ion-input type="text" placeholder="Buscar"></ion-input>
         <ion-button slot="end" fill="clear" class="ion-text-capitalize">
